# pybse

./: .gitignore  BSE_KNOWLEDGE.md  CLAUDE.md  README.md  pyproject.toml
pybse/: __init__.py  client.py  exceptions.py
pybse/http/: __init__.py  rest.py  soap.py
pybse/models/: __init__.py  enums.py  investor.py  order.py  serializer.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_investor.py  test_order.py  test_serialiser.py
