[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybse"
version = "0.1.0"
description = "A correct, reliable Python client library for BSE STAR MF APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "zeep",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-httpx",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort

[tool.mypy]
python_version = "3.11"
strict = true
